<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnBack"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/AddActivity_ButtonBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConfirm"
        style="@style/MyButtonStyle"
        android:layout_width="185dp"
        android:layout_height="83dp"
        android:layout_marginBottom="40dp"
        android:text="@string/AddActivity_ButtonConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPick"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/AddActivity_ButtonPick"
        app:layout_constraintBottom_toBottomOf="@+id/tInputAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/tInputAddress"
        app:layout_constraintTop_toTopOf="@+id/tInputAddress" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/AddActivity_TextViewAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/AddActivity_TextViewName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tInputAddress" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tInputName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tInputAddress"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tInputAddressT"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/AddActivity_TextInputAddressHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tInputName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tInputNameT"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/AddActivity_TextInputNameHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tInputDescription"
        android:layout_width="340dp"
        android:layout_height="110dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tInputDescriptionT"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/AddActivity_TextInputDescriptionHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnChooseImage"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/AddActivity_ButtonChooseImage"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tInputDescription"
        app:layout_constraintVertical_bias="0.383" />

    <TextView
        android:id="@+id/tvInputImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddActivity_TextViewImage"
        app:layout_constraintBottom_toTopOf="@+id/btnChooseImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tInputDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>